Bug 169251 - Crash on copy, new, paste Markdown
Summary: Crash on copy, new, paste Markdown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Markdown
  Show dependency treegraph
 
Reported: 2025-11-04 15:01 UTC by Timur
Modified: 2025-11-25 16:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ODT (20.50 KB, application/vnd.oasis.opendocument.text)
2025-11-04 15:01 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-11-04 15:01:59 UTC
Created attachment 203727 [details]
ODT

Ctrl+a, ctrl+c, new document, ctrl+shift+v and pick markdown. Crash
Fixed by Caolán: https://gerrit.libreoffice.org/c/core/+/193348
Comment 1 Commit Notification 2025-11-25 16:24:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ae32bee8dfe5b3264debc02276a3eeac7f51021

Related: tdf#169251 sw markdown export: fix crash on OLE with no graphic

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.