Related: tdf#169251 sw markdown export: fix crash on OLE with no graphic

It turns out Writer can have broken OLE objects without a replacement
graphic, so replace the assert with error handling.

While at it, also implement export of the OLE graphics when it's there.
(Insert a math object with a simple "a = b / c" formula to trigger that
codepath.)

Change-Id: Iad502bf243adacfce4d1bc903a77f19e4b81b007
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194506
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Code-Style: Miklos Vajna <vmiklos@collabora.com>